# aslp

./: .gitignore  README.md  asli.opam  dune  dune-project
.github/workflows/: opam.yml  test.yml
aslp-cpp/include/aslp-cpp/: aslp-cpp.hpp
aslp-cpp/source/: aslp-cpp.cpp
aslp-cpp/test/source/: aslp-cpp_test.cpp
libASL/: Semantics.g4  arm_env.ml  asl.ott  asl_utils.ml  cpp_backend.ml  cpu.ml  cpu.mli  decoder_program.ml  dis.ml  dis_tc.ml  dune  eval.ml  flags.ml  lexer.mll  lexersupport.ml  libASL.ml  loadASL.ml  loadASL.mli  ocaml_backend.ml  offline_opt.ml  offline_transform.ml  pretransforms.ml  primops.ml  rt_funs.ml  scala_backend.ml  symbolic.ml  symbolic_lifter.ml  tcheck.ml  testing.ml  transforms.ml  utils.ml  value.ml
libASL/support/: dune  solver.mli
libASL/support/native/: dune  solver.ml
offlineASL/: decode_tests.ml  dune  offline.ml  offline_utils.ml
offlineASL-cpp/: .gitignore  Doxyfile  README.md  build.sh  check.py
offlineASL-cpp/subprojects/aslp-lifter/: meson.build  meson.build.in
offlineASL-cpp/subprojects/aslp-lifter-demo/: meson.build  meson.options
offlineASL-cpp/subprojects/aslp-lifter-demo/src/: main.cpp
offlineASL-cpp/subprojects/aslp-lifter-llvm/: meson.build
offlineASL-cpp/subprojects/aslp-lifter-llvm/include/aslp/: llvm_interface.hpp
offlineASL-cpp/subprojects/aslp-lifter/include/aslp/: interface.hpp
offlineASL-scala/: .gitignore  build.sc  readme.md
offlineASL-scala/lifter/src/: interface.scala
offlineASL-scala/main/src/: Main.scala  NoneLifter.scala
tests/: bdd_ops.ml  dune  override.asl  test_asl.ml
tests/aslt/: cntlm-readme.md  cntlm-vec-ops.txt  ops.txt  test_antlr.t  test_cntlm_vec.t  test_dis.t
tests/coverage/: dune  off_run.sh  run.sh
